mutants.out.old/log/crates__umbra-core__src__calendar.rs_line_21_col_5.log

*** crates/umbra-core/src/calendar.rs:21:5: replace gregorian_to_jd2 -> Result<JulianDate2, DomainError> with Ok(Default::default())

*** mutation diff:
--- crates/umbra-core/src/calendar.rs
+++ replace gregorian_to_jd2 -> Result<JulianDate2, DomainError> with Ok(Default::default())
@@ -13,48 +13,17 @@
 pub fn gregorian_to_jd2(
     year: i32,
     month: u8,
     day: u8,
     hour: u8,
     minute: u8,
     second: f64,
 ) -> Result<JulianDate2, DomainError> {
-    if !(1..=12).contains(&month) {
-        return Err(DomainError::OutOfRange { what: "month" });
-    }
-    if !(1..=31).contains(&day) {
-        return Err(DomainError::OutOfRange { what: "day" });
-    }
-    if hour >= 24 {
-        return Err(DomainError::OutOfRange { what: "hour" });
-    }
-    if minute >= 60 {
-        return Err(DomainError::OutOfRange { what: "minute" });
-    }
-    if !(0.0..60.0).contains(&second) {
-        return Err(DomainError::OutOfRange { what: "second" });
-    }
-
-    // 1〜2月は前年の13〜14月として扱う（Meeus 7）。
-    let (y, m) = if month <= 2 {
-        (year - 1, i32::from(month) + 12)
-    } else {
-        (year, i32::from(month))
-    };
-    let a = (f64::from(y) / 100.0).floor();
-    let b = 2.0 - a + (a / 4.0).floor(); // 常に Gregorian 補正（プロレプティック）
-                                         // 0h（深夜）の JD。day は整数。
-    let jd0 = (365.25 * (f64::from(y) + 4716.0)).floor()
-        + (30.6001 * (f64::from(m) + 1.0)).floor()
-        + f64::from(day)
-        + b
-        - 1524.5;
-    let day_fraction = f64::from(hour) / 24.0 + f64::from(minute) / 1440.0 + second / 86400.0;
-    Ok(JulianDate2::new(jd0, day_fraction).normalized())
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 /// [`JulianDate2`] → グレゴリオ暦 `(year, month, day, hour, minute, second)`。
 ///
 /// Meeus Ch.7（Gregorian 分岐を常用）。
 // 出力は有界な暦フィールド（年は i32、月日時分は小範囲）。値域は floor 演算で保証されるため、
 // f64→整数の切り詰め/符号落ちは意図的であり安全。
 #[allow(clippy::cast_possible_truncation, clippy::cast_sign_loss)]


*** /usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=umbra-core@0.0.0
[1m[92m       Fresh[0m unicode-ident v1.0.24
[1m[92m       Fresh[0m proc-macro2 v1.0.106
[1m[92m       Fresh[0m quote v1.0.45
[1m[92m       Fresh[0m syn v2.0.117
[1m[92m       Fresh[0m thiserror-impl v2.0.18
[1m[92m       Fresh[0m thiserror v2.0.18
[1m[92m       Dirty[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core): the file `crates/umbra-core/src/calendar.rs` has changed (1781452276.762921014s, 308016909ns after last build at 1781452276.454904105s)
[1m[92m   Compiling[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core)
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib`
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta`
[1m[91merror[E0277][0m[1m: the trait bound `JulianDate2: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/calendar.rs:21:8
   [1m[94m|[0m
[1m[94m21[0m [1m[94m|[0m     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m        [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `JulianDate2`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `JulianDate2` with `#[derive(Default)]`
  [1m[94m--> [0mcrates/umbra-core/src/julian.rs:11:1
   [1m[94m|[0m
[1m[94m11[0m [92m+ #[derive(Default)][0m
[1m[94m12[0m [1m[94m|[0m pub struct JulianDate2 {
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[91merror[0m: could not compile `umbra-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta` (exit status: 1)
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1m[91merror[E0277][0m[1m: the trait bound `julian::JulianDate2: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/calendar.rs:21:8
   [1m[94m|[0m
[1m[94m21[0m [1m[94m|[0m     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m        [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `julian::JulianDate2`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `julian::JulianDate2` with `#[derive(Default)]`
  [1m[94m--> [0mcrates/umbra-core/src/julian.rs:11:1
   [1m[94m|[0m
[1m[94m11[0m [92m+ #[derive(Default)][0m
[1m[94m12[0m [1m[94m|[0m pub struct JulianDate2 {
   [1m[94m|[0m

[1m[91merror[0m: could not compile `umbra-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib` (exit status: 1)

*** result: Failure(101)
